...
    }

    private var buttonText: String {
        if viewModel.hasError {
            return "OK"
        } else if viewModel.isCompleted {
            return "Measure HRV"
        } else if case .countingDown = viewModel.state {
            return "Measuring..."
        } else {
            return "Measure HRV"
        }
    }
...
